Criptografia com AES

--- a/src/com/criptografia/view/Principal.form
+++ b/src/com/criptografia/view/Principal.form
@@ -27,7 +27,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="0" pref="245" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="246" max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="255" max="32767" attributes="0"/>
                   </Group>
@@ -35,9 +35,9 @@
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="txtCaminhoArquivo" min="-2" pref="437" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnProcurar" min="-2" pref="131" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="btnProcurar" min="-2" pref="117" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -84,25 +84,27 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jScrollPane1" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
-                          <Component id="jScrollPane1" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btCriptografarCifra" alignment="0" min="-2" pref="189" max="-2" attributes="0"/>
-                              <Component id="btnDecriptografarCesar" alignment="0" min="-2" pref="189" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="141" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="btnCriptografarSubstituicao" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnDescriptografarSubstituicao" alignment="0" min="-2" pref="158" max="-2" attributes="0"/>
+                              <Component id="btCriptografarCifra" max="32767" attributes="0"/>
+                              <Component id="btnDecriptografarCesar" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnCriptografarAES" max="32767" attributes="0"/>
+                              <Component id="btnDescriptografarAES" pref="137" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnDescriptografarSubstituicao" pref="128" max="32767" attributes="0"/>
+                              <Component id="btnCriptografarSubstituicao" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnSalvar" min="-2" pref="135" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <Component id="btnSalvar" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -111,20 +113,31 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btCriptografarCifra" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnCriptografarSubstituicao" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="btCriptografarCifra" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btnCriptografarSubstituicao" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace max="32767" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="btnDecriptografarCesar" min="-2" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="3" attributes="0">
+                                          <Component id="btnDescriptografarSubstituicao" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="btnDescriptografarAES" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <Component id="btnSalvar" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnDecriptografarCesar" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnDescriptografarSubstituicao" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="btnSalvar" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="btnCriptografarAES" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="302" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -172,7 +185,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnCriptografarSubstituicao">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Criptografia por Subst."/>
+            <Property name="text" type="java.lang.String" value="Cript. por Subst."/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCriptografarSubstituicaoActionPerformed"/>
@@ -180,10 +193,26 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnDescriptografarSubstituicao">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Decriptografar por Subst."/>
+            <Property name="text" type="java.lang.String" value="Decript. por Subst."/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDescriptografarSubstituicaoActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnCriptografarAES">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Criptografia AES"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCriptografarAESActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnDescriptografarAES">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Decriptografar AES"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDescriptografarAESActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
